force-app/main/default/objects/Application__c/fields/Credit_R__c.field-meta.xml
<CustomField>
    <fullName>Credit_R__c</fullName>
    <label>Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>