force-app/main/default/objects/Application__c/fields/Loan_Period__c.field-meta.xml
<CustomField>
    <fullName>Loan_Period__c</fullName>
    <label>Loan Period</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>