force-app/main/default/objects/Application__c/validationRules/Validate_Loan_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Loan_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Loan_Amount__c  = 300</errorConditionFormula>
    <errorMessage>Loan amount must be between 1000 and 5000.</errorMessage>
</ValidationRule>