force-app/main/default/objects/Application__c/validationRules/Validate_Loan_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Loan_Term</fullName>
    <active>true</active>
    <errorConditionFormula>Loan_Period__c  &lt; 6 ||  Loan_Period__c  &gt; 12</errorConditionFormula>
    <errorDisplayField>Loan_Period__c</errorDisplayField>
    <errorMessage>Loan Period must be between 6 and 12 months.</errorMessage>
</ValidationRule>